--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content=""
+      content="Password Checker React App By Oussama Outar"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Password Checker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
